cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 11)
project(CppPrimer VERSION 0.1.0)

add_subdirectory(./chp2Variable)
add_subdirectory(./chp3StrArr)
add_subdirectory(./chp7Class)
add_subdirectory(./chp8IO)
add_subdirectory(./chp6Func)
add_subdirectory(./chp9SeqContainer)
add_subdirectory(./chp10GenAlgorithm)
add_subdirectory(./chp11assoContainer)

